<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/menu_my_items"
        android:icon="@drawable/ic_action_tags_inverse"
        android:showAsAction="always"
        android:title="@string/menu_my_tags"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/overflow_menu"
        android:icon="@drawable/ic_action_overflow_inverse"
        android:showAsAction="always"
        android:title="@string/menu_overflow">
        <menu>
            <item
                android:id="@+id/menu_clippings_library"
                android:showAsAction="never"
                android:title="@string/menu_clippings_library"/>
            <item
                android:id="@+id/menu_visitor_guide"
                android:showAsAction="never"
                android:title="@string/menu_visitor_guide"/>
            <item
                android:id="@+id/menu_change_language"
                android:showAsAction="never"
                android:title="@string/menu_change_language"/>
        </menu>
    </item>

</menu>