<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_scan_again"
        android:icon="@drawable/ic_action_rescan"
        android:showAsAction="ifRoom"
        android:title="@string/menu_scan_again"/>
    <item
        android:id="@+id/menu_add_content"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="always"
        android:title="@string/menu_add_content"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_reload"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_view_clippings"
        android:icon="@drawable/ic_action_paste"
        android:showAsAction="ifRoom"
        android:title="@string/menu_clippings_library"/>

</menu>
