<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/question_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/question_prev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_previous"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/question_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_next"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <qr.cloud.qrpedia.IndicatedViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/question_nav"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/questionnaire_intro_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionnaire_intro_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/questionnaire_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionnaire_intro" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/questionnaire_q1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionnaire_q1_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/questionnaire_q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionnaire_q1" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <SeekBar
                    android:id="@+id/seek_bar_q1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:max="6"
                    android:progress="3" />

                <TextView
                    android:id="@+id/min_value_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/seek_bar_q1"
                    android:paddingLeft="16dp"
                    android:text="@string/questionnaire_negative" />

                <TextView
                    android:id="@+id/max_value_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/seek_bar_q1"
                    android:paddingRight="16dp"
                    android:text="@string/questionnaire_positive" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/questionnaire_q2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionnaire_q2_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/questionnaire_q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionnaire_q2" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <SeekBar
                    android:id="@+id/seek_bar_q2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:max="6"
                    android:progress="3" />

                <TextView
                    android:id="@+id/min_value_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/seek_bar_q2"
                    android:paddingLeft="16dp"
                    android:text="@string/questionnaire_negative" />

                <TextView
                    android:id="@+id/max_value_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/seek_bar_q2"
                    android:paddingRight="16dp"
                    android:text="@string/questionnaire_positive" />
            </RelativeLayout>

            <CheckBox
                android:id="@+id/questionnaire_no_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionnaire_no_messages"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/questionnaire_end_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionnaire_end_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/questionnaire_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionnaire_end" />

            <EditText
                android:id="@+id/questionnaire_comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/message_vertical_margin"
                android:layout_marginTop="@dimen/message_vertical_margin"
                android:gravity="top"
                android:hint="@string/questionnaire_comments_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="500" />
        </LinearLayout>
    </qr.cloud.qrpedia.IndicatedViewFlipper>

    <ProgressBar
        android:id="@+id/questionnaire_submit_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateOnly="true"
        android:visibility="gone" />

</RelativeLayout>